# love_simulation_chatbot

./: .envrc.template  .gitignore  Dockerfile  Makefile  Procfile  README.md  app.py  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  utils.players
app/: bot.py  main.py
data/000005/3704497891/: memory.pkl
data/000031/1703763794/: memory.pkl
data/12sdflk3sd5lksdu/: background  charactor_name  memory.pkl
data/U04872ff3b5b7b7a6a47b10e5ad70b83b/: background  charactor_name  memory.pkl
data/prompts/: generate_charactor.txt  start_conversation.txt  start_conversation_v2.txt
data/prompts/charactor/: 000000.json  000000.txt  000001.json  000001.txt  000002.json  000002.txt  000003.json  000003.txt  000004.json  000004.txt  000005.json  000005.txt  000006.json  000006.txt  000007.json  000007.txt  000008.json  000008.txt  000009.json  000009.txt  000010.json  000010.txt  000011.json  000011.txt  000012.json  000012.txt  000013.json  000013.txt  000014.json  000014.txt  000015.json  000015.txt  000016.json  000016.txt  000017.json  000017.txt  000018.json  000018.txt  000019.json  000019.txt  (+61 more)
data/tmp/memory/: 2728180051.pkl  8560551488.pkl  8581697899.pkl
docs/: ConversationFlow.dio  System.dio  SystemDesign.md
functions/linebot/: .gcloudignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
functions/linebot/utils/: players.py
notebook/: SaveMemory.ipynb  TestPrompts.ipynb
prompts/: generate_charactor.txt  start_conversation.txt  tmp.txt
prompts/charactor/: yui.txt
src/: app.py  bot.py  generate_charactors.py  run_conversation.py  upload_prompts.py
src/utils/: __init__.py  players.py  storage.py
tests/: test_storage.py
tmp/: .dockerignore  Dockerfile  docker-compose.yml
tmp/app/: bot.py  main.py
